[package]
name = "metalkit"
version = "0.1.0"
authors = ["Adam Nemecek <adamnemecek@gmail.com>"]
edition = "2018"
homepage = "https://github.com/adamnemecek/metalkit"
repository = "https://github.com/adamnemecek/metalkit"
description = "Rust wrapper around the MetalKit APIs"
keywords = ["metal", "graphics", "bindings"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
