[package]
name = "metalkit"
version = "0.1.1"
authors = ["Adam Nemecek <adamnemecek@gmail.com>"]
edition = "2018"
homepage = "https://github.com/adamnemecek/metalkit"
repository = "https://github.com/adamnemecek/metalkit"
description = "Rust wrapper around the Apple MetalKit APIs"
keywords = ["metal", "graphics", "bindings"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cocoa = "0.20"
core-graphics = "0.19"
foreign-types = "0.3"
metal = "*"

[dependencies.objc]
version = "0.2.4"
features = ["objc_exception"]

[dev-dependencies]
winit = "0.22"

[[example]]
name = "window"